-Draw engine: now it allows transparency
-Menu windows can be placed and resized to the whole program window
-Some windows geometry (position, size) are saved in the configuration
-Hotkeys now show right capitalization (lowercase or uppercase)
-Edit box now has a key to delete all input (cursor down)
-GUI color bars depend on current style
-Added support for more cyrillic characters on menu
-Added RetroMac Gui Style
-Improved footer:
--Footer now completely follows GUI Style
--Reordered cpu use, numbers in red when cpu use > 85%
--Now shows cpu temperature on Linux (and not only on Raspbian as before)

Added Real time playback from AY Chip sound to external MIDI device, on Linux and Mac OS X
Added menu to export AY chip music to midi (.mid) file
Added AY Sheet: showing a sheet with the notes being played
Added AY mixer menu

Added DAAD, PAWS and Quill debugger, for Spectrum and CPC (CPC only supports Daad)
Added text adventure keyboard also on CPC

Added colors to ncurses driver and Chloe machine
Added Chloe MMU to ZX-Uno
Added Derby+ and Derby++ roms

Added hdf to ide/mmc raw converter
Added hdf support to MMC emulation


Improved breakpoint parser: 
-full expression parser: parenthesis, functions, sums, multiplications, etc. Can be used as a full calculator!
-now it's a lot more faster. Up to 7 times faster, so it uses 7 times less cpu than the old version

Improved watches:
-using new expression parser
-up to 10 watches on screen
-watches are saved on configuration file

Improved Adventure Text Extractor: now it supports Daad games too. So it supports Daad, Paws, Quill and Gac
Improved Visualmem: now you can see all 3 different access (write, read, opcode) at once, generating a RGB color
Improved Waveform window: now the wave adjusts automatically to the zxwindow size
Improved Hexadecimal editor: now it resizes view to zxwindow height
Improved TSConf layers menu: Added "reveal" setting to view which pixels are used by a layer