@@ -809,6 +809,9 @@ extern char *util_unpaws_get_parser_name(void);
 extern char *util_undaad_unpaws_get_parser_name(void);
 extern int util_paws_is_in_parser(void);
 
+extern void util_str_add_char(char *texto,int posicion,char letra);
+extern void util_str_del_char(char *texto,int posicion);
+
 #define MEMORY_ZONE_NUM_FILE_ZONE 16
 #define MEMORY_ZONE_NUM_TBBLUE_COPPER 17 
 #define MEMORY_ZONE_NUM_TIMEX_EX 18
